--- a/openfisca_spain/tests/benefits/HG-077.yaml
+++ b/openfisca_spain/tests/benefits/HG-077.yaml
@@ -11,9 +11,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: true
@@ -37,9 +37,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -63,9 +63,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: true
@@ -90,9 +90,9 @@
      import_del_lloguer: 150
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: true
@@ -117,9 +117,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1931-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1931-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: true
@@ -143,9 +143,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -169,9 +169,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -195,9 +195,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -221,9 +221,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -247,9 +247,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: false
      VICTERRORISME: false
@@ -273,9 +273,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -299,9 +299,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -325,9 +325,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -351,9 +351,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -377,9 +377,9 @@
      import_del_lloguer: 700
   persons:
    - id: "pare1"
-     birth: '1947-01-15'
-     disposable_income: 0
-     usuari_serveis_socials: true
+     data_naixement: '1947-01-15'
+     ingressos_disponibles: 0
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
@@ -388,9 +388,9 @@
      PROHBENSUB: true
      COMPOBTRIBADMIN: false
    - id: "fill1"
-     birth: '1961-01-15'
-     disposable_income: 7000
-     usuari_serveis_socials: true
+     data_naixement: '1961-01-15'
+     ingressos_disponibles: 7000
+     es_usuari_serveis_socials: true
      ciutat_empadronament: "Barcelona"
      RESCAT5ANYS: true
      VICTERRORISME: false
