--- a/openfisca_spain/tests/variables/BLJ.yaml
+++ b/openfisca_spain/tests/variables/BLJ.yaml
@@ -3,7 +3,7 @@
   period: 2017-01
   absolute_error_margin: false
   input_variables:
-     birth: '1947-11-15'
+     data_naixement: '1947-11-15'
   output_variables:
      ESBLJ: True
 - name: "Persona amb 65 anys el 2012-12-31 és BLJ"
@@ -11,7 +11,7 @@
   period: 2017-01
   absolute_error_margin: false
   input_variables:
-     birth: '1947-12-31'
+     data_naixement: '1947-12-31'
   output_variables:
      ESBLJ: True
 - name: "Persona amb 65 anys el 2012-12-31 és BLJ"
@@ -19,6 +19,6 @@
   period: 2017-01
   absolute_error_margin: false
   input_variables:
-     birth: '1948-1-1'
+     data_naixement: '1948-1-1'
   output_variables:
      ESBLJ: False
